# mixed_pyo3_template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
example_pyo3_mixed/: __init__.py
mixed_pyo3_template/: __init__.py
src/: lib.rs
tests/: test_lib.py
