[package]
name = "example_pyo3_mixed"
version = "0.1.0"
authors = ["Colin Daniels <colin.r.daniels@gmail.com>"]
edition = "2018"

[lib]
name = "example_pyo3_mixed"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = [
    "pymatgen==2020.12.31",
]
classifier = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[package.metadata.maturin.scripts]
pyo3_hello = "example_pyo3_mixed:hello"
