[package]
name = "example_pyo3_mixed"
version = "0.1.2"
authors = ["Colin Daniels <colin.r.daniels@gmail.com>"]
description = "Example mixed python/rust package using pyo3 and maturin"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/colin-daniels/example_pyo3_mixed"

[lib]
name = "example_pyo3_mixed"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[package.metadata.maturin]
requires-python = ">=3.6"
requires-dist = [
    # e.g., "pymatgen==2020.12.31",
]
classifier = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[package.metadata.maturin.scripts]
pyo3_hello = "example_pyo3_mixed:hello"
